[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/CreateGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/Question.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/WindowDialog.gd" type="Script" id=3]

[node name="CreateGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.00139198
anchor_right = 1.00139
anchor_bottom = 1.0
margin_top = 0.629959
margin_bottom = 0.629944
color = Color( 0.32549, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "< BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 600.0
margin_bottom = 45.0

[node name="SceneName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 298.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Create Game"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 600.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "MEMORY GAME"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 70.0
alignment = 2

[node name="AddQuestionButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 346.0
margin_right = 459.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "ADD QUESTION"

[node name="RemoveQuestion" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 463.0
margin_right = 600.0
margin_bottom = 20.0
text = "REMOVE QUESTION"

[node name="Buttons2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 600.0
margin_bottom = 95.0
alignment = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/Buttons2"]
margin_left = 504.0
margin_right = 547.0
margin_bottom = 20.0
text = "SAVE"

[node name="LoadButton" type="Button" parent="VBoxContainer/Buttons2"]
margin_left = 551.0
margin_right = 600.0
margin_bottom = 20.0
text = "LOAD"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 600.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 600.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="Question" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 586.0
margin_bottom = 42.0
size_flags_horizontal = 5

[node name="CreateGameButton" type="Button" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 600.0
margin_bottom = 320.0
text = "CREATE GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddtlWordsPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -32.0
margin_right = 270.0
margin_bottom = 32.0
rect_min_size = Vector2( 540, 64 )
rect_scale = Vector2( 1.00161, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AddtlWordsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AddtlWordsPopup/VBoxContainer"]
margin_right = 540.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Not enough words/answers for the game. Please add more at the boxes below."
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="AddtlWordsPopup/VBoxContainer"]
margin_top = 34.0
margin_right = 540.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="AddtlWordsPopup/VBoxContainer/MarginContainer"]
margin_left = 12.0
margin_right = 528.0
margin_bottom = 30.0

[node name="Words1" type="LineEdit" parent="AddtlWordsPopup/VBoxContainer/MarginContainer/HBoxContainer" groups=[
"WordsGroup",
]]
margin_right = 500.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Ok" type="Button" parent="AddtlWordsPopup/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 516.0
margin_bottom = 20.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadPopup" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/Cardo/Documents/Godot/Prototype_Game"
current_path = "/Users/Cardo/Documents/Godot/Prototype_Game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePopup" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
access = 2
current_dir = "/Users/Cardo/Documents/Godot/Prototype_Game"
current_path = "/Users/Cardo/Documents/Godot/Prototype_Game/"
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/AddQuestionButton" to="." method="_on_AddQuestionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/RemoveQuestion" to="." method="_on_RemoveQuestion_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons2/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateGameButton" to="." method="_on_CreateGameButton_pressed"]
[connection signal="hide" from="AddtlWordsPopup" to="." method="_on_AddtlWordsPopup_hide"]
[connection signal="pressed" from="AddtlWordsPopup/VBoxContainer/MarginContainer/HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
[connection signal="file_selected" from="LoadPopup" to="." method="_on_LoadPopup_file_selected"]
[connection signal="file_selected" from="SavePopup" to="." method="_on_SavePopup_file_selected"]
